<?xml version="1.0"?>
<package>
  <name>robotiq_gazebo</name>
  <version>0.1.0</version>
  <description>The robotiq_gazebo package</description>

  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/robotiq</url>
  <url type="bugtracker">https://github.com/crigroup/robotiq/issues</url>
  <url type="repository">https://github.com/crigroup/robotiq</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_depend>roboticsgroup_upatras_gazebo_plugins</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>xmlrpcpp</run_depend>
  <run_depend>roboticsgroup_upatras_gazebo_plugins</run_depend>
</package>
